<resources>
    <!-- System -->
    <string name="app_name">Rank Of Things</string>
    <string name="app_name_desc">Aplicação para criar e avaliar Ranking</string>


    <!-- Menu - Title -->
    <string name="login">Efetuar Login</string>
    <string name="register">Registrar-se</string>
    <string name="createRank">Criar novo Ranking</string>
    <string name="viewRank">Visualizar Ranking</string>
    <string name="voteRank">Votação</string>
    <string name="anonymous">Modo anonimo</string>
    <string name="sobre">Sobre nós</string>


    <!-- Text - Activity - A_OPEN / A_LOGIN / A_REGISTER -->
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar Senha</string>

    <string name="resgister_1">Não possui conta?</string>
    <string name="resgister_2">Registre-se!</string>
    <string name="usedEmail">O endereço de email inserido já está em uso.</string>
    <string name="incompatiblePass">É a senha inserida no campo "senha" e "confirmar senha" deven ser iguais.</string>
    <string name="invalidEmail">O endereço de email inserido é inválido</string>

    <string name="login_1">Já possui conta?</string>
    <string name="login_2">Faça o Login!</string>
    <string name="informationIncorrect">Verifique se o email ou senha estão corretas</string>

    <string name="nameRank">Nome do Ranking</string>
    <string name="dataRank">Data de expiração</string>
    <string name="dataRank_time">Entre com o numero de horas</string>
    <string name="enterName_item">Adicione os itens</string>
    <string name="nameFood">Nome do item</string>
    <string name="nameFoodExtra">Nome do item extra</string>
    <string name="select_more_food">Clique no botão (+) para acicionar mais itens ao Ranking</string>
    <string name="save_list">Salvar Lista</string>
    <string name="rank_public">Definir como Rank publico</string>
    <string name="rank_private">Definir como Rank privado</string>
    <string name="alert_empty_item">Para adicionar um novo item, a caixa de texto não pode estar vazia</string>

    <string name="voteItem">Selecione apenas um dos itens</string>
    <string name="nameITem">Nome do item</string>
    <string name="voteAccountingITem">votos</string>

    <string name="first_item">Primeiro item</string>
    <string name="second_item">Segundo item</string>
    <string name="third_item">Terceiro item</string>
    <string name="others_item">Outros itens</string>

    <string name="profile">Perfil</string>
    <string name="nome_usuario">Nome do usuário:</string>
    <string name="email_usuario">Email do usuário:</string>
    <string name="list_friends">Lista de Amigos</string>
    <string name="not_friend_message">Você não tem amigos.</string>
    <string name="add_massage">Você deseja adicionar como amigo?</string>
    <string name="add_success">Solicitação enviada</string>
    <string name="add_friend">Adicionar amigo</string>
    <string name="add_friend_placeholder">Digite o nome do seu amigo</string>
    <string name="add_friend_message">Clique no item de um usuário para adicioná-lo.</string>
    <string name="add_friend_success">Amigo adicionado com sucesso.</string>
    <string name="add_friend_cancel">Amigo rejeitado com sucesso.</string>
    <string name="block_massage">Você realmente deseja bloquear esse amigo?</string>
    <string name="notify_friend_massage1">O usuário " </string>
    <string name="notify_friend_massage2"> " te mandou uma solicitação de amizade, você aceita a sua solicitação?</string>
    <string name="block_friend">Sim</string>
    <string name="cancel_block_friend">Não</string>
    notifyFriendInvit


    <!-- Menu - Button -->
    <string name="add">+</string>
    <string name="enter">Entrar</string>
    <string name="back">Voltar</string>
    <string name="home">Tela Inicial</string>
    <string name="ok">OK</string>
    <string name="vote">Confirmar Voto</string>
    <string name="cancel">Cancelar</string>
    <string name="login_menu">Login</string>
    <string name="guest">Modo anônimo</string>
    <string name="Perfil">Ver perfil</string>
    <string name="logout">Sair</string>
    <string name="menu">Menu</string>

    <string name="id_btn_menu_m01CreateRank">Criar\nRanking</string>
    <string name="id_btn_menu_m02Vote">Votar\nRanking</string>
    <string name="id_btn_menu_m03ViewRank">Ver\nRanking</string>
    <string name="id_btn_menu_m04Sobre">Sobre\no app</string>


    <!-- Texto -->
    <string name="voteSuccess">Voto realizado com sucesso!</string>
    <string name="sobre_text">
        O desafio principal do projeto é desenvolver uma aplicação que cria um sistema de rankings enquanto utiliza a memória principal da máquina (dispositivo) para o armazenamento dos dados. Ideia do projeto é ter uma aplicação Android que crie, compartilhe e gerencie rankings, focando na liberdade de utilização. Permitindo o imaginário e a expressão do usuário.
    </string>

    <!-- Temp -->
    <string name="temp">Temp</string>

    <string name="rankingNameIsRequired">O nome do Ranking não foi definido</string>
    <string name="moreItemsIsRequired">É necessario colocar mais de um item para votação</string>

    <string name="selectAnItem">É necessario seleciona um item para votar</string>
    <string name="_0">0</string>

</resources>