<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/block_friend_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:padding="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/block_massage"
        android:textAlignment="textStart"
        android:textColor="@color/cor_laranja"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/block_friend_accept"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:padding="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/block_friend"
            android:textAlignment="textStart"
            android:textColor="@color/cor_laranja"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/block_friend_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="end"
            android:padding="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/cancel_block_friend"
            android:textAlignment="textEnd"
            android:textColor="@color/cor_laranja"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>