<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A_A_Register"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cor_laranja"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/id_ic_register_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/stl_item_incolor"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:gravity="center"
            android:src="@drawable/ic_icon_back"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/ubuntu_bolder"
            android:text="@string/register"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textBranco01"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center|end"
            tools:ignore="TextContrastCheck"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="bottom"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    app:srcCompat="@drawable/ic_logo_laranja"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/ubuntu_bolder"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/cor_laranja"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <EditText
                    android:id="@+id/id_edtext_register_edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:autofillHints=""
                    android:background="@drawable/stl_edittext"
                    android:hint="@string/name"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:minHeight="40dp"
                    android:text="leandro"
                    android:textSize="16sp"
                    android:theme="@style/list_edTxt"
                    tools:ignore="Autofill,TextContrastCheck" />

                <EditText
                    android:id="@+id/id_edtext_register_edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:autoText="false"
                    android:autofillHints=""
                    android:background="@drawable/stl_edittext"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:minHeight="40dp"
                    android:text="me@gam.com"
                    android:textSize="16sp"
                    android:theme="@style/list_edTxt"
                    tools:ignore="Autofill,TextContrastCheck" />

                <EditText
                    android:id="@+id/id_edtext_register_edSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:autofillHints=""
                    android:background="@drawable/stl_edittext"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:minHeight="40dp"
                    android:text="123"
                    android:textSize="16sp"
                    android:theme="@style/list_edTxt"
                    tools:ignore="Autofill,TextContrastCheck" />

                <EditText
                    android:id="@+id/id_edtext_register_edConfirmSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:autofillHints=""
                    android:background="@drawable/stl_edittext"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:minHeight="40dp"
                    android:text="123"
                    android:textSize="16sp"
                    android:theme="@style/list_edTxt"
                    tools:ignore="Autofill,TextContrastCheck" />

                <Button
                    android:id="@+id/id_btn_register_login"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/stl_btn_color"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/enter"
                    android:textAllCaps="false"
                    android:textColor="@color/textBranco01"
                    android:textSize="18sp"
                    app:backgroundTint="@color/cor_laranja"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="40dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/login_1"
                        android:textAlignment="center"
                        android:textColor="@color/cor_laranja"
                        android:textSize="16sp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        tools:ignore="TextContrastCheck"
                        android:layout_gravity="center|center_vertical"/>

                    <TextView
                        android:id="@+id/id_text_register_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:fontFamily="@font/ubuntu_bolder"
                        android:text="@string/login_2"
                        android:textAlignment="center"
                        android:textColor="@color/cor_laranja"
                        android:textSize="16sp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        tools:ignore="TextContrastCheck"
                        android:background="@drawable/stl_item_color"
                        android:layout_gravity="center|center_vertical"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>