<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".view.A_A_Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cor_laranja"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/id_ic_register_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/stl_item_incolor"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:gravity="center"
            android:src="@drawable/ic_icon_back"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center|end"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/ubuntu_bolder"
            android:gravity="center"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textBranco01"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="40dp"
                android:gravity="center|bottom"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/id_profile_picture"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/danusa"
                    tools:ignore="ImageContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"

                android:layout_marginEnd="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_text_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/nome_usuario"
                    android:textAlignment="textStart"
                    android:textColor="@color/cor_laranja"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/id_text_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/email_usuario"
                    android:textAlignment="textStart"
                    android:textColor="@color/cor_laranja"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/id_text_profile_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/list_friends"
                    android:textAlignment="textStart"
                    android:textColor="@color/cor_laranja"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/friend_list"
                    android:layout_width="302dp"
                    android:layout_height="94dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="5dp"
                    android:paddingBottom="0dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/id_text_profile_add_friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/add_friend"
                    android:textAlignment="textStart"
                    android:textColor="@color/cor_laranja"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/id_edtext_register_edName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/stl_edittext"
                    android:hint="@string/add_friend_placeholder"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:minHeight="40dp"
                    android:textSize="16sp"
                    android:theme="@style/list_edTxt"
                    tools:ignore="Autofill,TextContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/id_add_friend_message"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="50"
                    android:fontFamily="@font/ubuntu_regular"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/add_friend_message"
                    android:textAlignment="center"
                    android:textColor="@color/cor_laranja"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>