<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A_M04_Sobre"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cor_laranja"
        android:minHeight="?attr/actionBarSize"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/id_ic_sobre_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/stl_item_incolor"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:gravity="center"
            android:src="@drawable/ic_icon_back"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/ubuntu_bolder"
            android:text="@string/sobre"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textBranco01"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center|end"
            tools:ignore="TextContrastCheck"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:srcCompat="@drawable/ic_logo_laranja"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/ubuntu_bolder"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cor_laranja"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/sobre_text"
            android:textAlignment="textStart"
            android:textColor="@color/textPreto02"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            tools:ignore="TextContrastCheck"/>

    </LinearLayout>

</LinearLayout>