<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardElevation="0dp"
    android:elevation="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF">

    <LinearLayout
        android:id="@+id/id_linear_m02_item01"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/stl_edittext"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp"
        android:saveEnabled="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:duplicateParentState="false"
            android:fadeScrollbars="false"
            android:longClickable="false"
            android:measureWithLargestChild="false"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/nome_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/nameITem"
                android:textColor="#DD2C00"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:duplicateParentState="false"
            android:fadeScrollbars="false"
            android:longClickable="false"
            android:measureWithLargestChild="false"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/valor_voto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/_0"
                android:textColor="#DD2C00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/texto_voto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/voteAccountingITem"
                android:textColor="#DD2C00"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>